@@ -52,6 +52,9 @@ Datum pgis_asgeobuf_transfn(PG_FUNCTION_ARGS)
 	MemoryContext aggcontext;
 	struct geobuf_agg_context *ctx;
 
+	/* We need to initialize the internal cache to access it later via postgis_oid() */
+	postgis_initialize_cache(fcinfo);
+
 	if (!AggCheckCallContext(fcinfo, &aggcontext))
 		elog(ERROR, "pgis_asgeobuf_transfn: called in non-aggregate context");
 	MemoryContextSwitchTo(aggcontext);
