@@ -132,6 +132,9 @@ Datum pgis_asmvt_transfn(PG_FUNCTION_ARGS)
 	MemoryContext aggcontext;
 	mvt_agg_context *ctx;
 
+	/* We need to initialize the internal cache to access it later via postgis_oid() */
+	postgis_initialize_cache(fcinfo);
+
 	if (!AggCheckCallContext(fcinfo, &aggcontext))
 		elog(ERROR, "%s called in non-aggregate context", __func__);
 	MemoryContextSwitchTo(aggcontext);
