@@ -1,10 +1,12 @@
 PostGIS 3.0.3dev
 2020/xx/xx
+
 * Bug Fixes and Enhancements *
   - #4742 tiger geocoder reverted to 2018 version on tiger upgrade
   - #4757, Handle line collapse due to snap-to-existing node (Sandro Santilli)
-	- #4719, Fail fast when srids don't match ST_Intersection(geometry,raster)
+  - #4719, Fail fast when srids don't match ST_Intersection(geometry,raster)
            Also schema qualify calls in function. (Regina Obe)
+  - #4739, Ensure all functions using postgis_oid initialize the internal cache (Raúl Marín)
 
 PostGIS 3.0.2
 2020/08/15
